Configs to deploy on githubio

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-gh-pages",
+  "name": "ssshhh",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://pedrohenriquerls.github.io/ssshhh/",
   "private": true,
   "dependencies": {
     "gh-pages": "^1.1.0",
