--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "homepage": "https://pedrohenriquerls.github.io/ssshhh/",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
